--- a/ArknightsBetting.Common/ArknightsBetting.Common.csproj
+++ b/ArknightsBetting.Common/ArknightsBetting.Common.csproj
@@ -14,6 +14,9 @@
 		<PackageReference Include="Sdcb.PaddleInference.runtime.win64.mkl" Version="2.5.1" />
 		<PackageReference Include="Sdcb.PaddleOCR" Version="2.7.0.1" />
 		<PackageReference Include="Sdcb.PaddleOCR.Models.Online" Version="2.7.0.1" />
+		<PackageReference Include="Serilog" Version="4.2.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+		<PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Update="adb\adb.exe">
