添加一些预处理函数，以及数字检测的单元测试

--- a/ArknightsBetting.Common.Test/ArknightsBetting.Common.Test.csproj
+++ b/ArknightsBetting.Common.Test/ArknightsBetting.Common.Test.csproj
@@ -24,4 +24,10 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="testdata\192_168_121_147_5555_20250428154920_Start.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
